// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Tile component should render correctly with default props 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View>
    <View
      animation="fadeIn"
      collapsable={false}
      delay={null}
      duration={200}
      style={
        {
          "borderColor": "transparent",
          "borderRadius": 6,
          "borderStyle": "solid",
          "borderWidth": 1,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
        }
      }
      testID="animatableView"
      useNativeDriver={true}
    />
  </View>,
]
`;

exports[`Test Tile component should render width and height 1`] = `
[
  <View
    onLayout={[Function]}
    style={
      {
        "height": 0,
        "width": 0,
      }
    }
  />,
  <View>
    <View
      animation="fadeIn"
      collapsable={false}
      delay={null}
      duration={200}
      style={
        {
          "borderColor": "transparent",
          "borderRadius": 6,
          "borderStyle": "solid",
          "borderWidth": 1,
          "height": 70,
          "paddingBottom": 12,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 12,
          "width": 50,
        }
      }
      testID="animatableView"
      useNativeDriver={true}
    />
  </View>,
]
`;
